homeautomation/weather/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather
  namespace: homeautomation
  annotations:
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"weather-station:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"weather\")].image"}]
spec:
  replicas: 0
  selector:
    matchLabels:
      app: weather
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
        - name: weather
          image: weather-station
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
              name: http-alt
