homeautomation/weather/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: weather
  name: weather
  namespace: homeautomation
spec:
  ports:
    - name: http-alt
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: weather
  sessionAffinity: None
  type: LoadBalancer
