homeautomation/weather/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: weather
    app.kubernetes.io/instance: homeautomation
  name: weather
  namespace: homeautomation
spec:
  host: weather.homeautomation.apps.homelab.csfreak.com
  port:
    targetPort: http-alt
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: weather
    weight: 100
  wildcardPolicy: None
